# tetromino

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  gpt-bug.md  pyproject.toml
tests/: app_test.py  conftest.py  test_app.py  test_beta.py  test_perf.py  test_performance.py
tests/resources/: generate_random_input.py  input_3000.txt  input_500.txt
tetris/: __init__.py  _beta.py  app.py  cli.py
